don't blow away existing path, just append to it

--- a/chef-repo/cookbooks/zca_build_server/templates/default/zenoss_bashrc.erb
+++ b/chef-repo/cookbooks/zca_build_server/templates/default/zenoss_bashrc.erb
@@ -8,5 +8,5 @@ fi
 # User specific aliases and functions
 export ZENHOME=/opt/zenoss
 export PYTHONPATH=$ZENHOME/lib/python
-export PATH=$ZENHOME/bin
+export PATH=$PATH:$ZENHOME/bin
 export INSTANCE_HOME=$ZENHOME
