--- a/chef-repo/cookbooks/zca_build_server/templates/ubuntu/zenoss_bashrc.erb
+++ b/chef-repo/cookbooks/zca_build_server/templates/ubuntu/zenoss_bashrc.erb
@@ -8,6 +8,6 @@ fi
 # User specific aliases and functions
 export ZENHOME=/usr/local/zenoss
 export PYTHONPATH=$ZENHOME/lib/python
-export PATH=$ZENHOME/bin:$PATH:/usr/lib/jvm/jdk1.6.0_30/bin/
+export PATH=$ZENHOME/bin:$PATH:/usr/lib/jvm/default-java/bin
 export INSTANCE_HOME=$ZENHOME
 export PROTOCOL_BUFFERS_PYTHON_IMPLEMENTATION=python
